# hello_tauri

./: .gitignore  Cargo.toml  README.md  build.rs  tauri.conf.json
.github/workflows/: webdriver.yml
src/: main.rs
webdriver/: README.md  hello_tauri.js  hello_tauri.test.js  helper.js  package.json
webdriver/jest/: README.md  hello_tauri.js  hello_tauri.test.js  package.json
webdriver/selenium/: README.md  package.json
webdriver/selenium/test/: test.js
webdriver/webdriverio/: README.md  package.json  wdio.conf.js
webdriver/webdriverio/test/specs/: example.e2e.js
