[package]
name = "hello_tauri"
version = "0.1.0"
authors = ["chip reed <chip@chip.sh>"]
license = "Apache-2.0"
edition = "2018"

[build-dependencies.tauri-build]
version = "1.0.0-beta.0"
default-features = false

[dependencies.tauri]
version = "1.0.0-beta.1"
default-features = false
features = [ "wry", "custom-protocol" ]

[profile.release]
incremental = false
codegen-units = 1
panic = "abort"
opt-level = "s"
lto = true
