[package]
name = "hello_tauri"
version = "0.1.0"
authors = ["chip reed <chip@chip.sh>"]
license = "Apache-2.0"
edition = "2018"

[build-dependencies.tauri-build]
version = "1.0.0-beta.0"
default-features = false

[dependencies.tauri]
git = "https://github.com/tauri-apps/tauri"
branch = "feat/webdriver"
features = [ "wry", "custom-protocol" ]

[profile.release]
incremental = false
codegen-units = 1
panic = "abort"
opt-level = "s"
lto = true

# use the custom branch in wry
[patch.crates-io.wry]
git = "https://github.com/tauri-apps/wry"
rev = "6a1475ff76cbdd699df9329ab8e2181c2a794c96"

[patch.crates-io.tao]
git = "https://github.com/tauri-apps/tao"
branch = "dev"
