[package]
name = "hello_tauri"
version = "0.1.0"
authors = ["chip reed <chip@chip.sh>"]
license = "Apache-2.0"
edition = "2018"

# Needed to set up some things for Tauri at build time
[build-dependencies]
tauri-build = { version = "1.0.0-rc.0", features = [] }

# The actual Tauri dependency, along with `custom-protocol` to serve the pages.
[dependencies]
tauri = { version = "1.0.0-rc.0", features = ["custom-protocol"] }

# Make --release build a binary that is small (opt-level = "s") and fast (lto = true).
[profile.release]
incremental = false
codegen-units = 1
panic = "abort"
opt-level = "s"
lto = true
